--- a/11_side_effects_data_fetching/project_showcase/package.json
+++ b/11_side_effects_data_fetching/project_showcase/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "json-server --watch db.json -p 3001",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
